testsuite/poke.pkl/field-init-diag-8.pk
/* { dg-do compile } */

type Foo
  = struct
    {
      int : a = a; /* { dg-error "" } */
    };
